updating DQN folder with final results

--- a/DQN_files/dqn_1.ipynb
+++ b/DQN_files/dqn_1.ipynb
@@ -25,10 +25,10 @@
       },
       "outputs": [],
       "source": [
-        "from classes.fighter_envs import StreetFighter\n",
-        "from classes.wrappers import train_model_dqn\n",
-        "from classes.evaluate import *\n",
-        "from classes.utils import build_all_permutations, save\n",
+        "from common.fighter_envs import StreetFighter\n",
+        "from common.wrappers import train_model_dqn\n",
+        "from common.evaluate import *\n",
+        "from common.utils import build_all_permutations, save\n",
         "\n",
         "import pandas as pd\n",
         "import numpy as np"
@@ -82,419 +82,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "data": {
-            "text/plain": [
-              "[169,\n",
-              " 528,\n",
-              " 494,\n",
-              " 585,\n",
-              " 535,\n",
-              " 300,\n",
-              " 467,\n",
-              " 76,\n",
-              " 361,\n",
-              " 264,\n",
-              " 675,\n",
-              " 434,\n",
-              " 608,\n",
-              " 588,\n",
-              " 726,\n",
-              " 48,\n",
-              " 832,\n",
-              " 288,\n",
-              " 731,\n",
-              " 405,\n",
-              " 125,\n",
-              " 629,\n",
-              " 806,\n",
-              " 680,\n",
-              " 196,\n",
-              " 103,\n",
-              " 773,\n",
-              " 939,\n",
-              " 876,\n",
-              " 52,\n",
-              " 360,\n",
-              " 551,\n",
-              " 546,\n",
-              " 571,\n",
-              " 893,\n",
-              " 256,\n",
-              " 324,\n",
-              " 326,\n",
-              " 89,\n",
-              " 709,\n",
-              " 303,\n",
-              " 455,\n",
-              " 352,\n",
-              " 212,\n",
-              " 122,\n",
-              " 32,\n",
-              " 451,\n",
-              " 593,\n",
-              " 565,\n",
-              " 239,\n",
-              " 973,\n",
-              " 51,\n",
-              " 133,\n",
-              " 731,\n",
-              " 320,\n",
-              " 208,\n",
-              " 562,\n",
-              " 808,\n",
-              " 943,\n",
-              " 649,\n",
-              " 435,\n",
-              " 494,\n",
-              " 507,\n",
-              " 272,\n",
-              " 746,\n",
-              " 494,\n",
-              " 393,\n",
-              " 760,\n",
-              " 402,\n",
-              " 919,\n",
-              " 761,\n",
-              " 507,\n",
-              " 886,\n",
-              " 586,\n",
-              " 698,\n",
-              " 874,\n",
-              " 367,\n",
-              " 765,\n",
-              " 475,\n",
-              " 447,\n",
-              " 84,\n",
-              " 97,\n",
-              " 556,\n",
-              " 801,\n",
-              " 539,\n",
-              " 499,\n",
-              " 905,\n",
-              " 589,\n",
-              " 767,\n",
-              " 139,\n",
-              " 809,\n",
-              " 35,\n",
-              " 317,\n",
-              " 650,\n",
-              " 759,\n",
-              " 998,\n",
-              " 839,\n",
-              " 87,\n",
-              " 455,\n",
-              " 20,\n",
-              " 57,\n",
-              " 467,\n",
-              " 386,\n",
-              " 325,\n",
-              " 681,\n",
-              " 82,\n",
-              " 62,\n",
-              " 455,\n",
-              " 126,\n",
-              " 486,\n",
-              " 610,\n",
-              " 915,\n",
-              " 981,\n",
-              " 475,\n",
-              " 856,\n",
-              " 919,\n",
-              " 300,\n",
-              " 821,\n",
-              " 742,\n",
-              " 971,\n",
-              " 969,\n",
-              " 219,\n",
-              " 484,\n",
-              " 988,\n",
-              " 737,\n",
-              " 529,\n",
-              " 824,\n",
-              " 636,\n",
-              " 662,\n",
-              " 44,\n",
-              " 478,\n",
-              " 721,\n",
-              " 425,\n",
-              " 327,\n",
-              " 715,\n",
-              " 934,\n",
-              " 60,\n",
-              " 786,\n",
-              " 656,\n",
-              " 671,\n",
-              " 462,\n",
-              " 27,\n",
-              " 808,\n",
-              " 832,\n",
-              " 752,\n",
-              " 149,\n",
-              " 407,\n",
-              " 188,\n",
-              " 690,\n",
-              " 869,\n",
-              " 763,\n",
-              " 768,\n",
-              " 540,\n",
-              " 1,\n",
-              " 575,\n",
-              " 425,\n",
-              " 443,\n",
-              " 246,\n",
-              " 605,\n",
-              " 805,\n",
-              " 64,\n",
-              " 76,\n",
-              " 623,\n",
-              " 563,\n",
-              " 202,\n",
-              " 648,\n",
-              " 434,\n",
-              " 762,\n",
-              " 851,\n",
-              " 898,\n",
-              " 208,\n",
-              " 220,\n",
-              " 751,\n",
-              " 225,\n",
-              " 488,\n",
-              " 50,\n",
-              " 297,\n",
-              " 365,\n",
-              " 47,\n",
-              " 956,\n",
-              " 842,\n",
-              " 492,\n",
-              " 591,\n",
-              " 479,\n",
-              " 623,\n",
-              " 608,\n",
-              " 801,\n",
-              " 888,\n",
-              " 785,\n",
-              " 406,\n",
-              " 940,\n",
-              " 571,\n",
-              " 483,\n",
-              " 22,\n",
-              " 747,\n",
-              " 946,\n",
-              " 704,\n",
-              " 212,\n",
-              " 510,\n",
-              " 349,\n",
-              " 52,\n",
-              " 98,\n",
-              " 9,\n",
-              " 620,\n",
-              " 87,\n",
-              " 89,\n",
-              " 368,\n",
-              " 652,\n",
-              " 770,\n",
-              " 940,\n",
-              " 710,\n",
-              " 828,\n",
-              " 64,\n",
-              " 136,\n",
-              " 337,\n",
-              " 362,\n",
-              " 349,\n",
-              " 208,\n",
-              " 123,\n",
-              " 658,\n",
-              " 422,\n",
-              " 314,\n",
-              " 416,\n",
-              " 291,\n",
-              " 977,\n",
-              " 299,\n",
-              " 561,\n",
-              " 549,\n",
-              " 535,\n",
-              " 20,\n",
-              " 96,\n",
-              " 914,\n",
-              " 46,\n",
-              " 841,\n",
-              " 806,\n",
-              " 10,\n",
-              " 150,\n",
-              " 421,\n",
-              " 755,\n",
-              " 936,\n",
-              " 488,\n",
-              " 340,\n",
-              " 859,\n",
-              " 37,\n",
-              " 809,\n",
-              " 359,\n",
-              " 20,\n",
-              " 185,\n",
-              " 393,\n",
-              " 381,\n",
-              " 719,\n",
-              " 886,\n",
-              " 50,\n",
-              " 52,\n",
-              " 116,\n",
-              " 924,\n",
-              " 196,\n",
-              " 80,\n",
-              " 899,\n",
-              " 279,\n",
-              " 262,\n",
-              " 134,\n",
-              " 723,\n",
-              " 358,\n",
-              " 350,\n",
-              " 141,\n",
-              " 221,\n",
-              " 391,\n",
-              " 626,\n",
-              " 45,\n",
-              " 518,\n",
-              " 913,\n",
-              " 710,\n",
-              " 821,\n",
-              " 889,\n",
-              " 831,\n",
-              " 411,\n",
-              " 340,\n",
-              " 872,\n",
-              " 614,\n",
-              " 154,\n",
-              " 126,\n",
-              " 549,\n",
-              " 656,\n",
-              " 726,\n",
-              " 275,\n",
-              " 791,\n",
-              " 606,\n",
-              " 271,\n",
-              " 65,\n",
-              " 966,\n",
-              " 88,\n",
-              " 802,\n",
-              " 359,\n",
-              " 584,\n",
-              " 97,\n",
-              " 498,\n",
-              " 83,\n",
-              " 990,\n",
-              " 80,\n",
-              " 925,\n",
-              " 405,\n",
-              " 859,\n",
-              " 209,\n",
-              " 775,\n",
-              " 423,\n",
-              " 409,\n",
-              " 254,\n",
-              " 903,\n",
-              " 940,\n",
-              " 698,\n",
-              " 918,\n",
-              " 754,\n",
-              " 342,\n",
-              " 106,\n",
-              " 677,\n",
-              " 234,\n",
-              " 64,\n",
-              " 105,\n",
-              " 724,\n",
-              " 517,\n",
-              " 823,\n",
-              " 765,\n",
-              " 931,\n",
-              " 635,\n",
-              " 973,\n",
-              " 508,\n",
-              " 768,\n",
-              " 976,\n",
-              " 624,\n",
-              " 501,\n",
-              " 40,\n",
-              " 191,\n",
-              " 86,\n",
-              " 770,\n",
-              " 948,\n",
-              " 302,\n",
-              " 669,\n",
-              " 792,\n",
-              " 677,\n",
-              " 338,\n",
-              " 211,\n",
-              " 93,\n",
-              " 604,\n",
-              " 244,\n",
-              " 363,\n",
-              " 935,\n",
-              " 587,\n",
-              " 283,\n",
-              " 447,\n",
-              " 238,\n",
-              " 34,\n",
-              " 899,\n",
-              " 956,\n",
-              " 58,\n",
-              " 423,\n",
-              " 737,\n",
-              " 128,\n",
-              " 470,\n",
-              " 973,\n",
-              " 895,\n",
-              " 532,\n",
-              " 694,\n",
-              " 595,\n",
-              " 891,\n",
-              " 9,\n",
-              " 12,\n",
-              " 938,\n",
-              " 443,\n",
-              " 920,\n",
-              " 284,\n",
-              " 699,\n",
-              " 628,\n",
-              " 829,\n",
-              " 145,\n",
-              " 261,\n",
-              " 304,\n",
-              " 333,\n",
-              " 887,\n",
-              " 190,\n",
-              " 611,\n",
-              " 792,\n",
-              " 106,\n",
-              " 404,\n",
-              " 866,\n",
-              " 800,\n",
-              " 82,\n",
-              " 730,\n",
-              " 202,\n",
-              " 188,\n",
-              " 897,\n",
-              " 9,\n",
-              " 369,\n",
-              " 907,\n",
-              " 265,\n",
-              " 230,\n",
-              " 612,\n",
-              " 246,\n",
-              " 873,\n",
-              " 687]"
-            ]
-          },
-          "execution_count": 6,
-          "metadata": {},
-          "output_type": "execute_result"
-        }
-      ],
+      "outputs": [],
       "source": [
         "random_seeds = [np.random.randint(1, 1000) for i in range(400)]\n",
         "random_seeds"
